// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible Component Renders Correctly 1`] = `
<div
  className="collapsible"
>
  <div
    className="collapsible-header"
  >
    <div
      className="collapsible-title"
    >
      <span />
      <span
        className="has-text-weight-bold"
      >
        COLLAPSIBLE TITLE
      </span>
    </div>
    <div
      className="collapsible-actions"
    />
    <div
      className="collapsible-trigger"
      onClick={[Function]}
    >
      <div
        className="chevron"
      >
        <span
          className="sp-chevron-up"
        />
      </div>
    </div>
  </div>
  <div
    className="collapsible-content collapsed"
  />
</div>
`;

exports[`Collapsible Component Renders Correctly when expanded 1`] = `
<div
  className="collapsible"
>
  <div
    className="collapsible-header"
  >
    <div
      className="collapsible-title"
    >
      <span />
      <span
        className="has-text-weight-bold"
      >
        COLLAPSIBLE TITLE
      </span>
    </div>
    <div
      className="collapsible-actions"
    />
    <div
      className="collapsible-trigger"
      onClick={[Function]}
    >
      <div
        className="chevron down"
      >
        <span
          className="sp-chevron-up"
        />
      </div>
    </div>
  </div>
  <div
    className="collapsible-content expanded"
  >
    <p>
      CONTENT_EXPANDED
    </p>
  </div>
</div>
`;
